--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   /* background-color: red; */
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
+  gap: 1.75rem;
   margin: 1.75rem;
 }
 
@@ -103,4 +103,29 @@ body {
 }
 
 @media (min-width: 640px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+    margin: 10vh auto 0;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 1rem;
+  }
+
+  .violet {
+    grid-column: 1/3;
+  }
+
+  .dark-blackish-blue {
+    grid-column: 2 / 4;
+  }
+
+  .item-5 {
+    grid-column: 4;
+    grid-row: 1 / 3;
+  }
 }
